--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,7 +3,7 @@ name: Update Collatz Data
 on:
   workflow_dispatch:  # Manual trigger
   schedule:
-    - cron: '*/1 * * * *'  # Runs every 1 minutes
+    - cron: '* * * * *'  # Runs every 1 minute
 
 jobs:
   update-data:
